force-app/main/default/objects/Student1__c/Student1__c.object-meta.xml
<CustomObject>
    <label>Student1</label>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>