force-app/main/default/objects/Student1__c/fields/ceiling__c.field-meta.xml
<CustomField>
    <fullName>ceiling__c</fullName>
    <formula>FLOOR(Num1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>