force-app/main/default/objects/Student1__c/fields/How_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>How_You_Hear_About_Us__c</fullName>
    <label>How You Hear About Us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Yelp</fullName>
            </value>
            <value>
                <fullName>Friend Referrel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>