force-app/main/default/objects/Student1__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pleasanton</fullName>
            </value>
            <value>
                <fullName>Milpitas</fullName>
            </value>
            <value>
                <fullName>San Roman</fullName>
            </value>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>