force-app/main/default/objects/Student1__c/fields/Num1__c.field-meta.xml
<CustomField>
    <fullName>Num1__c</fullName>
    <label>Num1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>