force-app/main/default/objects/Student1__c/fields/num2__c.field-meta.xml
<CustomField>
    <fullName>num2__c</fullName>
    <label>num2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>