force-app/main/default/objects/Student1__c/fields/result__c.field-meta.xml
<CustomField>
    <fullName>result__c</fullName>
    <formula>Num1__c + num2__c</formula>
    <label>result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>