force-app/main/default/objects/Student1__c/fields/School_Tour_DateTime__c.field-meta.xml
<CustomField>
    <fullName>School_Tour_DateTime__c</fullName>
    <label>School Tour DateTime</label>
    <type>DateTime</type>
</CustomField>