force-app/main/default/objects/Student1__c/fields/Student_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Student_Firstname__c</fullName>
    <label>Student Firstname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>