force-app/main/default/objects/Student1__c/fields/Student_LastName__c.field-meta.xml
<CustomField>
    <fullName>Student_LastName__c</fullName>
    <label>Student LastName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>