force-app/main/default/objects/Student1__c/fields/Student_SSN__c.field-meta.xml
<CustomField>
    <fullName>Student_SSN__c</fullName>
    <label>Student SSN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>