force-app/main/default/objects/Student1__c/fields/Todays_date__c.field-meta.xml
<CustomField>
    <fullName>Todays_date__c</fullName>
    <formula>&quot;Today&apos;s date is &quot; &amp; TEXT( TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Todays date</label>
    <type>Text</type>
</CustomField>