force-app/main/default/objects/Student1__c/fields/what_day1__c.field-meta.xml
<CustomField>
    <fullName>what_day1__c</fullName>
    <label>what day1</label>
    <type>Date</type>
</CustomField>