force-app/main/default/objects/Student1__c/fields/what_day__c.field-meta.xml
<CustomField>
    <fullName>what_day__c</fullName>
    <formula>CASE(
MOD( what_day1__c - DATE( 1900, 1, 7 ), 7 ),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
&quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>what day</label>
    <type>Text</type>
</CustomField>