force-app/main/default/objects/Student1__c/validationRules/ssn_format.validationRule-meta.xml
<ValidationRule>
    <fullName>ssn_format</fullName>
    <active>false</active>
    <description>To verify SSN format</description>
    <errorConditionFormula>NOT(
AND(
ISBLANK(Student_SSN__c	),
REGEX( Student_SSN__c	 , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;)
)
)</errorConditionFormula>
    <errorMessage>Enter Social Security number in the correct format</errorMessage>
</ValidationRule>