force-app/main/default/objects/Student1__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>email_address__c</columns>
    <columns>Joining_Date__c</columns>
    <columns>Status__c</columns>
    <columns>phone_number__c</columns>
    <columns>Student_Firstname__c</columns>
    <columns>Student_LastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>